feat: Replace String.format